--- a/src/page/Login/login.scss
+++ b/src/page/Login/login.scss
@@ -182,6 +182,7 @@
                     letter-spacing: 2px;
                     margin-top: 10%;
                     text-transform: uppercase;
+                    color: #fff;
                     background-color: #5653f8;
                 }
             }
