--- a/client/src/components/Content/content.scss
+++ b/client/src/components/Content/content.scss
@@ -101,6 +101,10 @@
                 margin: auto;
                 padding: 0;
 
+                & .dir {
+                    text-decoration: none;
+                }
+
                 & .card1 {
                     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
                     & .ant-card-head-title {
@@ -122,6 +126,16 @@
                             height: 50px;
                             border-radius: 50%;
                             border: 1px solid #1da1f2;
+
+                            &:hover {
+                                cursor: pointer;
+
+                                background-color: #1da1f2;
+                                border: 1px solid #fff;
+                                & i {
+                                    color: #fff;
+                                }
+                            }
 
                             & i {
                                 font-size: 20px;
@@ -153,6 +167,16 @@
                             border-radius: 50%;
                             border: 1px solid #ff9205;
 
+                            &:hover {
+                                cursor: pointer;
+
+                                background-color: #ff9205;
+                                border: 1px solid #fff;
+                                & i {
+                                    color: #fff;
+                                }
+                            }
+
                             & i {
                                 font-size: 20px;
                             }
@@ -166,8 +190,7 @@
         }
         & .row2 {
             width: 100%;
-            height: 48vh;
-            // background-color: aquamarine;
+            height: 44vh;
             display: flex;
             margin: 0;
             margin-top: 1.2%;
@@ -200,6 +223,16 @@
                             border-radius: 50%;
                             border: 1px solid #656565;
 
+                            &:hover {
+                                cursor: pointer;
+
+                                background-color: #fffd94;
+                                border: 1px solid #fffd94;
+                                & i {
+                                    color: #ee6262;
+                                }
+                            }
+
                             & i {
                                 font-size: 20px;
                             }
@@ -211,8 +244,34 @@
                     width: 98%;
                     height: 100%;
                     float: right;
+                    position: relative;
+
                     & .ant-card-body {
                         padding: 12px 24px 0px 24px;
+                        height: 100%;
+
+                        & .ant-table-wrapper.css-dev-only-do-not-override-pr0fja {
+                            height: 100%;
+
+                            & .ant-spin-nested-loading.css-dev-only-do-not-override-pr0fja {
+                                height: 100%;
+                            }
+
+                            & .ant-table-content {
+                                height: 100%;
+                            }
+                        }
+
+                        & .ant-spin-container {
+                            height: 100%;
+                        }
+
+                        &
+                            ul.ant-pagination.ant-table-pagination.ant-table-pagination-right.css-dev-only-do-not-override-pr0fja {
+                            position: absolute;
+                            right: 0;
+                            bottom: 14%;
+                        }
                     }
                 }
             }
