--- a/client/src/page/Admin/ChiTietMonHoc/ChiTietMonHoc.scss
+++ b/client/src/page/Admin/ChiTietMonHoc/ChiTietMonHoc.scss
@@ -1,11 +1,114 @@
 .ChiTietMonHoc_Content {
     margin-top: 70px;
     min-height: 700px;
-    display: grid;
-    grid-template-columns: 3fr 1fr; /* Chia thành 2 cột, tỷ lệ 3/4 và 1/4 */
     gap: 16px;
+    padding: 20px;
+}
+.ChiTietMonHoc_Add {
+    button {
+        background-color: #0d6efd;
+        border-radius: 8px;
+        color: #ffffff;
+    }
 }
 .ChiTietMonHoc_Lich {
+    position: relative;
+}
+.faded {
+    opacity: 0.5; /* Điều chỉnh độ mờ tùy theo nhu cầu */
+    pointer-events: none; /* Ngăn chặn sự tương tác với các phần tử bên dưới */
 }
 .ChiTietMonHoc_Form {
+    position: absolute;
+    top: 25%;
+    left: 40%;
+    z-index: 80;
+}
+
+//-------FORM
+/* CSS để trang trí biểu mẫu */
+.form-container {
+    background-color: #e8e3e3; /* Màu xám nhạt cho nền */
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.3);
+    width: 400px; /* Điều chỉnh kích thước của biểu mẫu tùy theo nhu cầu */
+    margin: 0 auto;
+    text-align: left;
+    position: relative;
+}
+.form-button-close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: red;
+    height: 25px;
+    width: 25px;
+    border-radius: 3px;
+    align-items: center;
+}
+.form-button-close-x {
+    background-color: transparent;
+    color: white;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+}
+
+.form-container h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+/* CSS cho các mục input và label */
+.form-container label {
+    display: block;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.form-container input[type='text'],
+.form-container textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.form-container input[type='text'][readonly],
+.form-container textarea[readonly] {
+    background-color: #eee;
+    cursor: not-allowed;
+}
+
+/* CSS cho nút cập nhật */
+.form-container button {
+    background-color: #007bff; /* Màu xanh dương */
+    color: #fff; /* Màu chữ trắng */
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+.form-container button:hover {
+    background-color: #0056b3; /* Màu xanh dương nhạt khi hover */
+}
+
+/* CSS cho nút cập nhật */
+.form-container button {
+    background-color: #007bff; /* Màu xanh dương */
+    color: #fff; /* Màu chữ trắng */
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+.form-container button:hover {
+    background-color: #0056b3; /* Màu xanh dương nhạt khi hover */
 }
