--- a/client/src/components/NavBar/navbar.scss
+++ b/client/src/components/NavBar/navbar.scss
@@ -7,6 +7,7 @@
     display: flex;
     position: fixed;
     z-index: 1000;
+    position: relative;
 
     & .logo {
         width: 20%;
@@ -157,4 +158,10 @@
             }
         }
     }
+}
+
+.modalshowChangePass {
+    position: absolute;
+    top: 500%;
+    left: 30%;
 }
