--- a/client/src/page/Home/ChiTietSinhVien/ChiTietSinhVien.scss
+++ b/client/src/page/Home/ChiTietSinhVien/ChiTietSinhVien.scss
@@ -89,10 +89,19 @@ hr {
 .ChiTietSinhVien_container {
     display: flex;
 }
-
+b {
+    font-size: 14px;
+}
 .column {
     margin-left: 30px;
     margin-right: 30px;
     flex: 1;
     padding: 10px;
+}
+.ChiTietSinhVien_text-info-11 {
+    padding-left: 80px;
+}
+.ChiTietSinhVien_text-info-111 {
+    margin-top: 15px;
+    width: 100%;
 }
