--- a/client/src/components/NavBar/navbar.scss
+++ b/client/src/components/NavBar/navbar.scss
@@ -7,7 +7,6 @@
     display: flex;
     position: fixed;
     z-index: 1000;
-    position: relative;
 
     & .logo {
         width: 20%;
@@ -161,7 +160,14 @@
 }
 
 .modalshowChangePass {
-    position: absolute;
-    top: 500%;
-    left: 30%;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    margin: auto;
+
+    & .close-form-btn {
+        background-color: transparent;
+        float: right;
+        padding: 8px 16px;
+    }
 }
