update lich and form

--- a/client/src/page/GiangVien/FormYeuCau/FormYeuCau.scss
+++ b/client/src/page/GiangVien/FormYeuCau/FormYeuCau.scss
@@ -20,7 +20,8 @@
     }
 
     & input,
-    textarea {
+    textarea,
+    select {
         width: 100%;
         padding: 8px;
         margin-bottom: 10px;
