--- a/client/src/page/Home/ThongBao/ChiTietThongBao/ChiTietThongBao.scss
+++ b/client/src/page/Home/ThongBao/ChiTietThongBao/ChiTietThongBao.scss
@@ -34,3 +34,14 @@
 .Thongbao_text {
     padding: 25px 15px;
 }
+.Thongbao_img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 250px;
+}
+.Thongbao_img_if {
+    height: 100%px;
+    width: 200px;
+}
