update yeucau admin

--- a/client/src/page/Admin/Phong/PhongHoc.scss
+++ b/client/src/page/Admin/Phong/PhongHoc.scss
@@ -1,7 +1,9 @@
 /* Container cho toàn bộ nội dung */
 .body__content {
-    margin-top: 70px;
     display: flex;
+}
+.content {
+    margin-top: 70px;
 }
 .loaiphong {
     padding: 20px;
