--- a/client/src/page/Home/ChiTietSinhVien/ChiTietSinhVien.scss
+++ b/client/src/page/Home/ChiTietSinhVien/ChiTietSinhVien.scss
@@ -2,6 +2,7 @@
     padding-top: 50px;
     width: 80%;
     margin: auto;
+    padding-bottom: 40px;
 
     & .ChiTietSinhVien_my-info {
         width: 100%;
