--- a/client/src/page/Home/ThongBao/ChiTietThongBao/ChiTietThongBao.scss
+++ b/client/src/page/Home/ThongBao/ChiTietThongBao/ChiTietThongBao.scss
@@ -6,7 +6,7 @@
 }
 
 .Thongbao_body {
-    //padding: 20px;
+    padding: 20px;
 
     background-color: transparent;
 }
@@ -32,16 +32,29 @@
     width: 1150px;
 }
 .Thongbao_text {
-    padding: 25px 15px;
+    padding: 25px 60px;
 }
 .Thongbao_img {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 250px;
+    height: auto;
+    padding-bottom: 20px;
 }
 .Thongbao_img_if {
-    height: 100%px;
-    width: 200px;
+    height: 500px;
+    width: 450px;
+}
+
+.Thongbao_text {
+    white-space: pre-line;
+}
+
+.Thongbao_text p {
+    margin-left: 1rem; /* Thụt đầu dòng 1rem cho các đoạn văn bản trong thẻ p */
+}
+
+.Thongbao_text p::before {
+    content: '\00a0\00a0'; /* Thêm hai khoảng trắng trước mỗi dòng trong thẻ p */
 }
