--- a/client/src/page/Admin/ChiTietPhong/ChiTietPhong.scss
+++ b/client/src/page/Admin/ChiTietPhong/ChiTietPhong.scss
@@ -30,8 +30,7 @@
         margin-left: 10px;
     }
 }
-.PhongHoc__danhsach {
-}
+
 .faded {
     opacity: 0.5; /* Điều chỉnh độ mờ tùy theo nhu cầu */
     pointer-events: none; /* Ngăn chặn sự tương tác với các phần tử bên dưới */
@@ -127,4 +126,123 @@
 
 .form-container button:hover {
     background-color: #0056b3; /* Màu xanh dương nhạt khi hover */
+}
+
+/////form maintance
+.PhongHoc_formMaintance {
+    height: 180px;
+    padding: 5px 10px 5px 20px;
+    border-radius: 5px;
+    width: 450px;
+    background-color: rgb(217, 217, 217);
+    box-shadow: 6px 8px 15px rgba(0, 0, 0, 0.3);
+}
+.PhongHoc_formMaintance_button {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+.PhongHoc_formMaintance_close {
+    height: 30px;
+    width: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    color: #fff;
+    margin: 5px;
+    border-radius: 3px;
+}
+
+/// form đổi lịch ---------------------------------
+.PhongHoc__danhsach {
+    position: relative;
+}
+.PhongHoc_doiLich {
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    background-color: rgb(217, 217, 217);
+    height: 620px;
+    width: 950px;
+    z-index: 90;
+    border-radius: 5px;
+}
+.PhongHoc_doiLich_close {
+    height: 30px;
+    width: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    color: #fff;
+    margin: 10px;
+    border-radius: 3px;
+}
+.PhongHoc_doiLich_dslich {
+    height: 350px;
+    margin: 5px 15px;
+}
+.PhongHoc_doiLich_dsphong {
+    border-top: 1px solid gray;
+    height: 150px;
+    margin: 5px 15px;
+}
+
+.PhongHoc_doiLich_btn {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.PhongHoc_doiLich_btn > Button {
+    margin-top: 6px;
+    width: 300px;
+}
+
+///-------
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* 4 cột trong grid */
+    gap: 20px;
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.card {
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    background-color: #9fcaf8;
+}
+
+.card > p {
+    font-size: 10px;
+}
+//--------------
+.PhongDoiLichGrid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr); /* 4 cột trong grid */
+    gap: 20px;
+    max-height: 120px;
+    overflow-y: auto;
+}
+.PhongDoiLichItem {
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    height: 70px;
+    background-color: #e6e4e4; /* Màu xám */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 5px;
+    transition: all 0.3s ease; /* Hiệu ứng chuyển động 0.3 giây */
+}
+.PhongDoiLichItem:hover {
+    transform: scale(1.06); /* Tăng kích thước khi hover */
+    background-color: #b0c4de; /* Màu xanh biển */
+}
+.clicked {
+    background-color: #8aaddc; /* Màu đỏ khi clicked */
+    box-shadow: 0 0 10px #b0c4de; /* Hiển thị đường viền mờ khi clicked */
+    transition: background-color 0.3s ease; /* Hiệu ứng chuyển động màu nền 0.3 giây */
 }
