--- a/client/src/page/Admin/Phong/PhongHoc.scss
+++ b/client/src/page/Admin/Phong/PhongHoc.scss
@@ -132,7 +132,7 @@
     border-color: #04458c;
 }
 
-button {
+.phonghoc_content button {
     background-color: #007bff;
     color: white;
     border: none;
@@ -141,7 +141,7 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.phonghoc_content button:hover {
     background-color: #007bff;
 }
 
