--- a/client/src/components/Content/content.scss
+++ b/client/src/components/Content/content.scss
@@ -93,8 +93,9 @@
         & .row {
             width: 100%;
             display: flex;
+            gap: 2%;
             margin: 0;
-            margin-top: 1.2%;
+            margin-top: 1.5%;
 
             & .col {
                 width: 50%;
@@ -107,6 +108,9 @@
 
                 & .card1 {
                     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+                    width: 100%;
+                    border: none;
+
                     & .ant-card-head-title {
                         color: #1da1f2;
                     }
@@ -142,12 +146,12 @@
                             }
                         }
                     }
-
-                    width: 98%;
-                    border: none;
                 }
                 & .card2 {
                     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+                    width: 100%;
+                    border: none;
+
                     & .ant-card-head-title {
                         color: #ff9205;
                     }
@@ -182,26 +186,28 @@
                             }
                         }
                     }
-
-                    width: 98%;
-                    border: none;
                 }
             }
         }
         & .row2 {
             width: 100%;
-            height: 44vh;
+            // height: 50vh;
             display: flex;
             margin: 0;
-            margin-top: 1.2%;
-            position: relative;
+            margin-top: 1.5%;
+            // position: relative;
+            gap: 2%;
 
             & .col2 {
-                width: 50%;
-                height: 100%;
+                width: 49%;
+                height: fit-content;
+                display: flex;
+                gap: 2%;
+                flex-direction: column;
+
                 & .card {
                     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
-                    width: 98%;
+                    width: 100%;
                     border: none;
                     & .ant-card-head-title {
                         color: #717171;
@@ -241,10 +247,12 @@
                 }
 
                 & .card2 {
-                    width: 98%;
-                    height: 100%;
-                    float: right;
-                    position: relative;
+                    width: 100%;
+                    min-height: 50vh;
+                    height: fit-content;
+                    display: block;
+                    // float: right;
+                    // position: relative;
 
                     & .ant-card-body {
                         padding: 12px 24px 0px 24px;
@@ -266,12 +274,56 @@
                             height: 100%;
                         }
 
-                        &
-                            ul.ant-pagination.ant-table-pagination.ant-table-pagination-right.css-dev-only-do-not-override-pr0fja {
-                            position: absolute;
-                            right: 0;
-                            bottom: 14%;
-                        }
+                        // &
+                        //     ul.ant-pagination.ant-table-pagination.ant-table-pagination-right.css-dev-only-do-not-override-pr0fja {
+                        //     position: absolute;
+                        //     right: 0;
+                        //     bottom: 14%;
+                        // }
+                    }
+                }
+            }
+        }
+
+        & .row3 {
+            width: 100%;
+            height: 40vh;
+            display: flex;
+            justify-content: space-between;
+            margin: 0;
+            margin-top: 1.5%;
+            position: relative;
+
+            & .col3 {
+                width: 34%;
+                height: 100%;
+
+                & .card {
+                    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+                    border: none;
+                    height: 100%;
+
+                    .chart {
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                    }
+                }
+
+                & .card2 {
+                    width: 100%;
+                    height: 100%;
+                    // display: flex;
+                    // justify-content: center;
+
+                    .ant-card-body {
+                        padding: 0 !important;
+                    }
+                    .chart {
+                        width: 80%;
+                        margin: auto;
                     }
                 }
             }
@@ -304,6 +356,79 @@
             opacity: 1;
             -webkit-transform: scale(1);
             transform: scale(1);
+        }
+    }
+}
+
+@media screen and (max-width: 840px) {
+    .content-coponent {
+        & .my-info {
+            & .avt {
+                width: 100%;
+
+                & img {
+                    width: 40%;
+                }
+            }
+
+            & .text-info {
+                display: none;
+            }
+
+            & .text-info2 {
+                display: none;
+            }
+        }
+
+        & .learning-calendar {
+            & .row {
+                display: flex;
+                flex-direction: column-reverse;
+
+                & .col {
+                    width: 100%;
+                    margin-top: 2%;
+                    margin-left: 0;
+                    margin-right: 0;
+
+                    & .card {
+                        width: 100%;
+                    }
+                }
+            }
+
+            & .row2 {
+                height: 47vh;
+
+                & .col2 {
+                    width: 100%;
+                    height: 100%;
+
+                    & .mt-3 {
+                        margin-top: 0 !important;
+                    }
+
+                    & .card2 {
+                        height: fit-content;
+                    }
+                }
+            }
+
+            & .row3 {
+                display: flex;
+                flex-direction: row;
+                margin-top: 48vh;
+
+                & .col3 {
+                    width: 100% !important;
+                    margin: 4vh 0;
+                    height: 40vh;
+
+                    & .result-chart {
+                        display: none;
+                    }
+                }
+            }
         }
     }
 }
