--- a/client/src/page/Admin/ChiTietMonHoc/ChiTietMonHoc.scss
+++ b/client/src/page/Admin/ChiTietMonHoc/ChiTietMonHoc.scss
@@ -1,3 +1,60 @@
+.chitietmonhoc-content {
+    margin-top: 10vh;
+    width: 100%;
+
+    & .title {
+        width: 100%;
+        height: 8vh;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 2%;
+        border-bottom: 1px solid #ccc;
+
+        & h1 {
+            color: #166fbe;
+            font-size: 24px;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+    }
+
+    & .course-table {
+        width: 94%;
+        margin: auto;
+
+        & .ant-table-wrapper {
+            padding: 20px;
+
+            & .ant-table-thead th {
+                background: #0c6fbe !important;
+                color: #fff !important;
+            }
+
+            & .ant-table {
+                box-shadow: rgba(33, 35, 38, 0.3) 0px 10px 10px -10px;
+            }
+        }
+    }
+
+    & .addCourseBtn {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
+        & button {
+            height: 5vh;
+            color: #fff;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+    }
+}
+
 .ChiTietMonHoc_Content {
     margin-top: 70px;
     min-height: 700px;
